--- a/p8105_HW5_rkm2147.md
+++ b/p8105_HW5_rkm2147.md
@@ -37,3 +37,131 @@ scale_fill_discrete = scale_fill_viridis_d
 ```
 
 # Problem 1
+
+Importing data
+
+``` r
+homicide_df = read_csv(file = "./homicide-data.csv")
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   uid = col_character(),
+    ##   reported_date = col_double(),
+    ##   victim_last = col_character(),
+    ##   victim_first = col_character(),
+    ##   victim_race = col_character(),
+    ##   victim_age = col_character(),
+    ##   victim_sex = col_character(),
+    ##   city = col_character(),
+    ##   state = col_character(),
+    ##   lat = col_double(),
+    ##   lon = col_double(),
+    ##   disposition = col_character()
+    ## )
+
+**Raw data explanation**
+
+The raw homicide data frame contains the variables: uid, reported\_date,
+victim\_last, victim\_first, victim\_race, victim\_age, victim\_sex,
+city, state, lat, lon, disposition. There are a total of 52179 contained
+within. Upon first glance it appears that we will need to tidy the
+variable concerning the reported data of the incident that occurred.
+Data collected for this frame was by The Washington Post, it gathered
+information on homicides in 50 large U.S. cities
+
+Create city\_state variable & resolved variable
+
+``` r
+tidy_homicide_df = 
+homicide_df %>% 
+  mutate(
+    city_state = str_c(city, state, sep = "_"),
+    resolved = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest"        ~ "unsolved",
+      disposition == "Closed by arrest"      ~ "solved",
+    ))
+```
+
+``` r
+homicide_summary_df = 
+  tidy_homicide_df %>% 
+  group_by(city_state) %>% 
+  summarize(
+    hom_total = n(),
+    hom_unsolved = sum(resolved == "unsolved")
+  )
+```
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
+Prop test
+
+``` r
+prop.test(
+  homicide_summary_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_unsolved), 
+  homicide_summary_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_total)) %>% 
+  broom::tidy()
+```
+
+    ## # A tibble: 1 x 8
+    ##   estimate statistic  p.value parameter conf.low conf.high method    alternative
+    ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
+    ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample… two.sided
+
+Try to iterate ……..
+
+``` r
+results_df = 
+  homicide_summary_df %>% 
+  mutate(
+    prop_tests = map2(.x = hom_unsolved, .y = hom_total, ~prop.test(x = .x, n = .y)),
+    tidy_tests = map(.x = prop_tests, ~broom::tidy(.x))
+  ) %>% 
+  select(-prop_tests) %>% 
+  unnest(tidy_tests) %>% 
+  select(city_state, estimate, conf.low, conf.high)
+```
+
+    ## Warning in prop.test(x = .x, n = .y): Chi-squared approximation may be incorrect
+
+``` r
+results_df %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate)) +
+  geom_point() + 
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+```
+
+<img src="p8105_HW5_rkm2147_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
+
+``` r
+city_prop_test = function(df) {
+  
+  n_unsovled ...
+  n_total ... 
+  
+  prop.test(.....)
+  
+}
+homicide_df = 
+  read_csv("data/homicide-data.csv") %>% 
+  mutate(
+    city_state = str_c(city, state, sep = "_"),
+    resolved = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest"        ~ "unsolved",
+      disposition == "Closed by arrest"      ~ "solved",
+    )
+  ) %>% 
+  select(city_state, resolved) %>% 
+  filter(city_state != "Tulsa_AL") %>% 
+  nest(data = resolved)
+```
+
+    ## Error: <text>:3:14: unexpected symbol
+    ## 2:   
+    ## 3:   n_unsovled ...
+    ##                 ^
