--- a/p8105_HW5_rkm2147.md
+++ b/p8105_HW5_rkm2147.md
@@ -96,12 +96,14 @@ homicide_summary_df =
 
     ## `summarise()` ungrouping output (override with `.groups` argument)
 
-Prop test
+Prop test for Baltimore, MD
 
 ``` r
 prop.test(
-  homicide_summary_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_unsolved), 
-  homicide_summary_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_total)) %>% 
+  homicide_summary_df %>% 
+    filter(city_state == "Baltimore_MD") %>% pull(hom_unsolved) 
+  
+ , homicide_summary_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_total)) %>% 
   broom::tidy()
 ```
 
@@ -110,7 +112,7 @@ prop.test(
     ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
     ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample… two.sided
 
-Try to iterate ……..
+Running a prop test for each city in the data frame
 
 ``` r
 results_df = 
@@ -125,6 +127,8 @@ results_df =
 ```
 
     ## Warning in prop.test(x = .x, n = .y): Chi-squared approximation may be incorrect
+
+A plot that shows the estimates and CIs for each city
 
 ``` r
 results_df %>% 
