--- a/p8105_HW5_rkm2147.Rmd
+++ b/p8105_HW5_rkm2147.Rmd
@@ -106,26 +106,48 @@ results_df %>%
 
 
 
-```{r, error = TRUE}
-city_prop_test = function(df) {
-  
-  n_unsovled ...
-  n_total ... 
-  
-  prop.test(.....)
-  
-}
-homicide_df = 
-  read_csv("data/homicide-data.csv") %>% 
-  mutate(
-    city_state = str_c(city, state, sep = "_"),
-    resolved = case_when(
-      disposition == "Closed without arrest" ~ "unsolved",
-      disposition == "Open/No arrest"        ~ "unsolved",
-      disposition == "Closed by arrest"      ~ "solved",
-    )
+# Problem 2
+
+Start with a dataframe containing all file names; the list.files function will help
+
+
+```{r}
+path_df = 
+  tibble(
+    path = list.files("data")
   ) %>% 
-  select(city_state, resolved) %>% 
-  filter(city_state != "Tulsa_AL") %>% 
-  nest(data = resolved)
+  mutate(
+    path = str_c("data/", path),
+    data = map(path, ~read_csv(.x))
+    )  
+ 
 ```
+
+
+Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary 
+
+```{r}
+tidy_df =
+path_df %>% 
+ mutate(
+path = str_replace(path, "data/con", "control"),
+path = str_replace(path, "data/exp", "experiment"),
+path = str_replace(path, ".csv", "")
+) %>% 
+   unnest(data) %>% 
+   separate(
+   path, into = c("treatment","id")
+ ) %>% 
+  pivot_longer( 
+    week_1:week_8,
+    names_to = "week",
+    values_to = "value"
+  ) 
+```
+
+
+take a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+```{r}
+
+```
+
