--- a/p8105_HW5_rkm2147.md
+++ b/p8105_HW5_rkm2147.md
@@ -19,6 +19,8 @@ library(tidyverse)
     ## x dplyr::lag()    masks stats::lag()
 
 ``` r
+library(patchwork)
+
 knitr::opts_chunk$set(
   fig.width = 6,
   fig.asp = .6,
@@ -64,11 +66,11 @@ homicide_df = read_csv(file = "./homicide-data.csv")
 
 The raw homicide data frame contains the variables: uid, reported\_date,
 victim\_last, victim\_first, victim\_race, victim\_age, victim\_sex,
-city, state, lat, lon, disposition. There are a total of 52179 contained
-within. Upon first glance it appears that we will need to tidy the
-variable concerning the reported data of the incident that occurred.
-Data collected for this frame was by The Washington Post, it gathered
-information on homicides in 50 large U.S. cities
+city, state, lat, lon, disposition. There are a total of 52179
+observations contained within. Upon first glance it appears that we will
+need to tidy the variable concerning the reported data of the incident
+that occurred. Data collected for this frame was by The Washington Post,
+it gathered information on homicides in 50 large U.S. cities
 
 Create city\_state variable & resolved variable
 
@@ -143,8 +145,7 @@ results_df %>%
 
 # Problem 2
 
-Start with a dataframe containing all file names; the list.files
-function will help
+Import the data
 
 ``` r
 path_df = 
@@ -378,9 +379,7 @@ path_df =
     ##   week_8 = col_double()
     ## )
 
-Tidy the result; manipulate file names to include control arm and
-subject ID, make sure weekly observations are “tidy”, and do any other
-tidying that’s necessary
+Tidying the recently imported data
 
 ``` r
 tidy_df =
@@ -406,27 +405,28 @@ path = str_replace(path, ".csv", "")
   )
 ```
 
-make a spaghetti plot showing observations on each subject over time,
-and comment on differences between groups.
-
-need to figure out how to compare control vs treatment
+Spaghetti plot\!
 
 ``` r
 tidy_df %>% 
  
-  ggplot(aes( x = week, y = value, group = id, color = id)) + geom_line() +  facet_grid(rows = vars(treatment)) 
+  ggplot(aes( x = week, y = value, group = id, color = id)) + geom_line() +  facet_grid(cols = vars(treatment)) + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
 <img src="p8105_HW5_rkm2147_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
 
-\*\*\* switch the position of the facet, to better compare the
-values\*\*\* \# problem 3
+We can see from the plot that when comparing the control and experiment
+group, the experiment group across the weeks of the study has the
+highest amount of values recorded. Focusing in on the control group, the
+values recorded relatively stayed the same over the span of 8 weeks. For
+the experiment group, the values increased incrementally over the course
+of 8 weeks.This makes sense considering the placebo effect of the
+control.
 
-x∼Normal\[μ,σ\]
+# Problem 3
 
-For each dataset, save μ̂ and the p-value arising from a test of H:μ=0
-using α=0.05 . Hint: to obtain the estimate and p-value, use broom::tidy
-to clean the output of t.test.
+Set up the function that is to be used.
 
 ``` r
 sim_ms = function(n = 30, mu, sigma = 5) {
@@ -448,40 +448,35 @@ sim_ms = function(n = 30, mu, sigma = 5) {
 }
 ```
 
-Run for μ=0
+Set μ=0 Generate 5000 datasets from the model x∼Normal\[μ,σ\]
 
 ``` r
 zero_output = 
-  rerun(50, sim_ms(30, 0, 5)) %>% 
+  rerun(5000, sim_ms(30, 0, 5)) %>% 
   bind_rows() %>% 
   select(
     estimate, p.value
   )
+
+zero_output
 ```
 
-Re running for μ={0,1,2,3,4,5,6}
+    ## # A tibble: 5,000 x 2
+    ##    estimate p.value
+    ##       <dbl>   <dbl>
+    ##  1    1.39   0.101 
+    ##  2    1.26   0.161 
+    ##  3   -0.690  0.459 
+    ##  4   -0.216  0.812 
+    ##  5   -1.59   0.0374
+    ##  6    1.22   0.277 
+    ##  7   -0.543  0.549 
+    ##  8   -0.130  0.902 
+    ##  9   -0.518  0.536 
+    ## 10    1.02   0.357 
+    ## # … with 4,990 more rows
 
-``` r
-# don't believe this works
-mu_list = 
-  list(
-    "mu_0"  = 0, 
-    "mu_1"  = 1, 
-    "mu_2" = 2, 
-    "mu_3" = 3,  
-    "mu_4" = 4, 
-    "mu_5" = 5,
-    "mu_6" = 6
-    )
-
-six_output = vector("list", length = 7)
-
-for (i in 1:7) {
-  six_output[[i]] = rerun(5, sim_ms(mu = mu_list[[i]])) %>% bind_rows() %>%  select(estimate, p.value)
-}
-```
-
-trying maria’s way
+Re running our previously set function for μ={0,1,2,3,4,5,6}
 
 ``` r
 new_six = 
@@ -495,28 +490,10 @@ new_six =
       select(-output_list)
 ```
 
-Make a plot showing the proportion of times the null was rejected (the
-power of the test) on the y axis and the true value of μ (1-6) on the x
-axis. Describe the association between effect size and power.
+Plot showing the power of the test
 
 ``` r
-# i dont think this works...
-graph_data =
-bind_rows(six_output) %>%
-mutate(
-test_results = case_when(
-p.value < .05 ~ "reject",
-p.value >= .05 ~ "fail to reject"
-))  %>% 
-  summarize(
-    total_test = n(),
-    reject_test = sum(test_results == "reject")) %>% 
-  mutate(
-    power = (reject_test / total_test))
-```
-
-``` r
-rejection_plot = 
+power_plot = 
 new_six %>% group_by(mu) %>% 
   count(p.value < .05) %>% 
   mutate(
@@ -535,9 +512,95 @@ The association between effect size and power is visualized in the
 rejection\_plot. We can see that as the true value of mu for the sample
 increases, or in this case deviates from the null value of 0, the effect
 size increases. This increase in the effect size results in the increase
-of the power for the study. Power is (1- Beta), beta being the
-proportion of the null hypothesis being rjected. Even at a considerably
-small effect size, when the true value of mu is very close to the null
-mu value, we see that the power is just above 0.0 and is not exactly 0.
-I understand this is due to the random error and chance associated with
-studies that were simulated.
+of the power for the study. Power is (1- Beta), the probability of
+avoiding a type II error. Even at a considerably small effect size, when
+the true value of mu is very close to the null mu value, we see that the
+power is just above 0.0 and is not exactly 0. I understand this is due
+to the random error and chance associated with studies that were
+simulated.
+
+Setting up data frame for samples in which null is rejected
+
+``` r
+rejected_data = 
+new_six %>% 
+mutate(
+test_results = case_when(
+p.value < .05 ~ "reject",
+p.value >= .05 ~ "fail to reject"
+)) %>% 
+  filter(
+    test_results == "reject"
+  ) %>% 
+  group_by(mu)
+```
+
+null is rejected data plot
+
+``` r
+reject_plot =
+rejected_data %>% 
+  summarize(
+    mean_reject = mean(estimate)
+  ) %>% 
+  ggplot(aes(x = mu, y = mean_reject)) + geom_smooth() + geom_point() +
+labs(
+    
+    title = "Rejected null data",
+      x = "True value of Mu",
+    y = "average estimate of μ̂
+ only in samples for which the null was rejected"
+  )
+```
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
+Setting up data frame for all samples
+
+``` r
+all_data = 
+new_six %>% 
+mutate(
+test_results = case_when(
+p.value < .05 ~ "reject",
+p.value >= .05 ~ "fail to reject"
+))  %>% 
+  group_by(mu)
+```
+
+Plot for all of the samples
+
+``` r
+all_plot = 
+all_data %>% 
+  summarize(
+    mean_all = mean(estimate)
+  ) %>% 
+  ggplot(aes(x = mu, y = mean_all)) + geom_smooth() + geom_point() +
+labs(
+    
+    title = "All data",
+      x = "True value of Mu",
+    y = "average estimate of μ̂
+ "
+  )
+```
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
+Final plots\!\!
+
+``` r
+all_plot + reject_plot
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+
+<img src="p8105_HW5_rkm2147_files/figure-gfm/unnamed-chunk-19-1.png" width="90%" />
+
+We see the most deviation between the average estimate of mu for all
+data and for the rejected null hypothesis data when the true value of mu
+is in the lower range (closer to the value of 0). The sample average of
+μ̂ across tests for which the null is rejected becomes more equal to
+the true value of μ as the true value increases.
